# thunar-diff-plugin

thunar-diff-plugin/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  aclocal.m4  autogen.sh  config.h.in  configure.ac
thunar-diff-plugin/icons/: Makefile.am
thunar-diff-plugin/icons/16x16/: Makefile.am
thunar-diff-plugin/icons/scalable/: Makefile.am
thunar-diff-plugin/po/: ChangeLog  Makevars  POTFILES.in  thunar-diff-plugin.pot  zh_CN.po
thunar-diff-plugin/thunar-diff-plugin/: Makefile.am  edit_perf.glade  tdp-provider.c  tdp-provider.h  tdp_preference.c  tdp_preference.h  thunar-diff-plugin.c
