# $Id: Makefile.am,v 1.3 2013/06/02 14:51:59 setup Exp $

appsdir = $(datadir)/icons/hicolor/16x16/apps
apps_DATA =						\
	tdp-select-left.png				\
	tdp-select-middle.png				\
	tdp-select-two-items-to-merge.png		\
	tdp-compare-to-left.png				\
	tdp-compare-two-items.png			\
	tdp-merge-three-items.png			\
	tdp-merge-to-left-items.png			\
	tdp-merge-to-left-middle-items.png		\
	tdp-edit-preferences.png

EXTRA_DIST =						\
	$(apps_DATA)

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
