# $Id: Makefile.am,v 1.1 2013/07/21 13:19:55 setup Exp $

appsdir = $(datadir)/icons/hicolor/scalable/apps
apps_DATA =						\
	tdp-select-left.svg				\
	tdp-select-middle.svg				\
	tdp-select-two-items-to-merge.svg		\
	tdp-compare-to-left.svg				\
	tdp-compare-two-items.svg			\
	tdp-merge-three-items.svg			\
	tdp-merge-to-left-items.svg			\
	tdp-merge-to-left-middle-items.svg		\
	tdp-edit-preferences.svg

EXTRA_DIST =						\
	$(apps_DATA)

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
